# tasty

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/aa-texture-sample/: README.md  image.glsl  toy.toml
src/: main.rs  runtime.rs  toy.rs  watch.rs
src/toy/: shader.rs
