[package]
name = "tasty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
futures = {version = "0.3.31", features = ["thread-pool"]}
image = "0.25.5"
log = "0.4.22"
miniquad = "0.4.7"
notify = "7.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
tempdir = "0.3.7"
